-Add: reworked to be compatible with stereum-release

--- a/base-installer/roles/stereum-controlcenter/defaults/main.yaml
+++ b/base-installer/roles/stereum-controlcenter/defaults/main.yaml
@@ -1,2 +1,3 @@
 ---
-controlcenter_version: %%CONTROLCENTER_RELEASE%%
+controlcenter_version: "%%CONTROLCENTER_RELEASE%%"
+stereum_version: beta-6rc6-82
