--- a/base-installer/roles/stereum-controlcenter/defaults/main.yaml
+++ b/base-installer/roles/stereum-controlcenter/defaults/main.yaml
@@ -1,3 +1,3 @@
 ---
 controlcenter_version: "%%CONTROLCENTER_RELEASE%%"
-stereum_version: beta-6rc6-82
+stereum_version: "%%CONTROLCENTER_RELEASE%%"
