-Change: removed go, switched to python

--- a/base-installer/roles/stereum-controlcenter/tasks/main.yaml
+++ b/base-installer/roles/stereum-controlcenter/tasks/main.yaml
@@ -1,4 +1,18 @@
 ---
+- name: stop controlcenter
+  shell: docker-compose down
+  args:
+    chdir: /opt/stereum/controlcenter
+  # ignore errors in case the container is not running
+  ignore_errors: yes
+  when: existing_stereum_release is defined and existing_stereum_release != 'None'  
+
+- name: delete previous release
+  file:
+    path: /opt/stereum/controlcenter
+    state: absent    
+  when: existing_stereum_release is defined and existing_stereum_release != 'None'
+
 - name: Install git
   apt:
     update_cache: yes
