support non-standard ssh port

--- a/base-installer/roles/stereum-controlcenter/templates/inventory.yaml
+++ b/base-installer/roles/stereum-controlcenter/templates/inventory.yaml
@@ -4,3 +4,4 @@ stereumnodes:
     {{ docker_host_internal }}
   vars:
     ansible_user: stereum
+    ansible_port: {{ stereum_ssh_port | default('22') }}
