--- a/electron-launcher/package.json
+++ b/electron-launcher/package.json
@@ -17,6 +17,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
@@ -25,6 +26,7 @@
     "ssh2": "^1.1.0",
     "tunnel-ssh": "^4.1.4",
     "vue": "^2.6.14",
+    "vue-form-wizard": "^0.8.4",
     "vue-router": "^3.5.2",
     "vue-toasted": "^1.1.28",
     "vuex": "^3.6.2"
