--- a/electron-launcher/package.json
+++ b/electron-launcher/package.json
@@ -22,6 +22,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
     "electron-promise-ipc": "^2.2.4",
+    "electron-store": "^8.0.0",
     "iconv": "^3.0.0",
     "iconv-corefoundation": "^1.1.6",
     "js-yaml": "^4.1.0",
