introducing CentOS compatibility

--- a/base-installer/roles/docker/tasks/main.yaml
+++ b/base-installer/roles/docker/tasks/main.yaml
@@ -1,54 +1,11 @@
 ---
-- name: Install aptitude using apt
-  apt:
-    name: aptitude
-    state: latest
-    update_cache: yes
-    force_apt_get: yes
+- name: Docker on CentOS
+  include_tasks: docker-centos.yaml
+  when: ansible_distribution == "CentOS"
 
-- name: Remove conflicting docker packages
-  apt:
-    name: "{{ item }}"
-    state: absent
-  loop:
-    - docker-engine
-    - docker.io
-    - docker-registry
-
-- name: Install required system packages
-  apt:
-    name: "{{ item }}"
-    state: latest
-    update_cache: yes
-  loop:
-  - apt-transport-https
-  - ca-certificates
-  - curl
-  - software-properties-common
-  - python3-pip
-  - python3-docker
-  - virtualenv
-  - python3-setuptools
-  - gnupg2
-  - pass
-
-- name: Add Docker GPG apt Key
-  apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    state: present
-
-- name: Add Docker Repository
-  apt_repository:
-    repo: deb https://download.docker.com/linux/ubuntu bionic stable
-    state: present
-
-- name: Update apt and install docker-ce and docker-compose
-  apt:
-    update_cache: yes
-    name:
-    - docker-ce
-    - docker-compose
-    state: latest
+- name: Docker on Ubuntu
+  include_tasks: docker-ubuntu.yaml
+  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 
 - name: enable service docker
   systemd:
@@ -61,3 +18,5 @@
     name: "{{ ubuntu_common_stereum_user_name }}"
     groups: docker
     append: yes
+
+# EOF
