--- a/base-installer/roles/stereum-controlcenter/tasks/main.yaml
+++ b/base-installer/roles/stereum-controlcenter/tasks/main.yaml
@@ -16,8 +16,15 @@
   apt:
     update_cache: yes
     name:
-    - git    
+    - git
     state: latest
+  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+
+- name: Install git
+  yum:
+    name: git
+    state: latest
+  when: ansible_distribution == "CentOS"
 
 - name: prepare installer directory
   file:
