--- a/base-installer/roles/docker/tasks/docker-centos.yaml
+++ b/base-installer/roles/docker/tasks/docker-centos.yaml
@@ -10,6 +10,7 @@
 - name: Add repository
   yum_repository:
     name: docker-ce
+    description: Docker CE repo
     baseurl: https://download.docker.com/linux/centos/docker-ce.repo
 
 - name: Install docker-ce
