fix centos docker repo url

--- a/base-installer/roles/docker/tasks/docker-centos.yaml
+++ b/base-installer/roles/docker/tasks/docker-centos.yaml
@@ -11,7 +11,7 @@
   yum_repository:
     name: docker-ce
     description: Docker CE repo
-    baseurl: https://download.docker.com/linux/centos/docker-ce.repo
+    baseurl: https://download.docker.com/linux/centos/8/x86_64/stable/
 
 - name: Install docker-ce
   yum:
