disable centos docker gpg check

--- a/base-installer/roles/docker/tasks/docker-centos.yaml
+++ b/base-installer/roles/docker/tasks/docker-centos.yaml
@@ -12,6 +12,7 @@
     name: docker-ce
     description: Docker CE repo
     baseurl: https://download.docker.com/linux/centos/8/x86_64/stable/
+    disable_gpg_check: yes
 
 - name: Install docker-ce
   yum:
