use file module instead of shell

--- a/base-installer/roles/docker/tasks/docker-centos.yaml
+++ b/base-installer/roles/docker/tasks/docker-centos.yaml
@@ -26,9 +26,14 @@
   shell: curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
 
 - name: Make docker-compose executable
-  shell: chmod +x /usr/local/bin/docker-compose
+  file:
+    path: /usr/local/bin/docker-compose
+    mode: '0755'
 
 - name: Link docker-compose
-  shell: ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+  file:
+    state: link
+    path: /usr/bin/docker-compose
+    src: /usr/local/bin/docker-compose
 
 # EOF
