fix python docker dependencies

--- a/base-installer/roles/docker/tasks/docker-centos.yaml
+++ b/base-installer/roles/docker/tasks/docker-centos.yaml
@@ -19,21 +19,13 @@
       - docker-ce
       - docker-ce-cli
       - containerd.io
+      - python3-docker
     state: latest
     disable_gpg_check: yes
 
-- name: Install docker-compose
-  shell: curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-
-- name: Make docker-compose executable
-  file:
-    path: /usr/local/bin/docker-compose
-    mode: '0755'
-
-- name: Link docker-compose
-  file:
-    state: link
-    path: /usr/bin/docker-compose
-    src: /usr/local/bin/docker-compose
+- name: Install pip's docker-compose
+  pip:
+    name: docker-compose
+    executable: pip3
 
 # EOF
