--- a/electron-launcher/package.json
+++ b/electron-launcher/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
+    "electron-log": "^4.4.1",
     "electron-promise-ipc": "^2.2.4",
     "electron-store": "^8.0.0",
     "js-yaml": "^4.1.0",
